geneweb (5.00-5) unstable; urgency=low

  * debian/patches/000_Makefile: set STRIP=true in Makefile(s)
    to avoid forced stripping of binaries. Closes: #436970

 -- Christian Perrier <bubulle@debian.org>  Fri, 10 Aug 2007 16:37:44 +0200

geneweb (5.00-4) unstable; urgency=low

  * Remove useless test in get-iso-codes
  * debian/patches/013_cleaner-Makefile: Add check_base to
    src/Makefile to really clean out and allow building twice in a row
  * Fix the "make clean" line to not ignore errors from a missing Makefile
    Thanks lintian.

 -- Christian Perrier <bubulle@debian.org>  Fri, 27 Jul 2007 17:49:30 +0200

geneweb (5.00-3) unstable; urgency=low

  * Debian packaging:
    - bring back fixes to geneweb.postrm that were accidentally removed in
      5.00-2

 -- Christian Perrier <bubulle@debian.org>  Sun, 20 May 2007 11:14:59 +0200

geneweb (5.00-2) unstable; urgency=low

  * First upload to unstable
  * Debian packaging:
    - Added languages to debconf templates, to fit the list of
      languages in 5.00: Breton, Slovenian
    - Cleaned out debian/rules and removed old commented cruft
    - Cleaned out geneweb.prerm from old unused code which contained ugly
      "read" calls spotted by lintian
    - Removed useless debian/geneweb.init.old
    - Removed useless debian/changelog.old
    - Set debhelper compatibility level to 5

 -- Christian Perrier <bubulle@debian.org>  Sun, 20 May 2007 08:38:12 +0200

geneweb (5.00-1) experimental; urgency=low

  * New upstream release
  * Add debconf-updatepo to the clean target of debian/rules

 -- Christian Perrier <bubulle@debian.org>  Wed, 28 Feb 2007 21:04:18 +0100

geneweb (4.10-26) unstable; urgency=low

  * Debconf translations:
    - Tamil added. Closes: #412100

 -- Christian Perrier <bubulle@debian.org>  Fri, 23 Feb 2007 18:01:03 +0100

geneweb (4.10-25) unstable; urgency=low

  * Move debconf dependency to Pre-Depends because we use debconf in
    the postrm script