@@ -2,8 +2,11 @@ geneweb (5.00-5) unstable; urgency=low
 
   * debian/patches/000_Makefile: set STRIP=true in Makefile(s)
     to avoid forced stripping of binaries. Closes: #436970
+  * debian/rules: as upstream provides only Makefile but *no*
+    tools/Makefile.inc, only run "make clean" when both these files
+    exist
 
- -- Christian Perrier <bubulle@debian.org>  Fri, 10 Aug 2007 16:37:44 +0200
+ -- Christian Perrier <bubulle@debian.org>  Fri, 10 Aug 2007 17:58:54 +0200
 
 geneweb (5.00-4) unstable; urgency=low
 
